exportMode and responseGeographic as input paramater
